--- a/samples/poputka/pwa.css
+++ b/samples/poputka/pwa.css
@@ -1,5 +1,6 @@
 [data-dap=false]{display:none !important;}
 [ui=click]{cursor:pointer;}
+
 [FADE]{/* position:absolute; */animation: 1s fadein;width: 100%;}
 [FADE].STALE{opacity:0; transition:opacity 1s ease}
 @keyframes fadein { from {opacity:0;} to {opacity:1} }
@@ -34,7 +35,7 @@ input, select,textarea {
 	font-family:inherit;
 	padding:.2em;
 	border:none;
-	margin: .5em;
+	margin: .5rem 0;
 	border-radius: .25em;
 }
 
@@ -54,9 +55,9 @@ input::placeholder, textarea::placeholder{
 
 
 button {
-	margin: 1em;
+	/* margin: 1em; */
 	padding: .5em;
-	border-radius: .5em;
+	border-radius: .25em;
 	border: none;
 }
 
@@ -64,26 +65,37 @@ button {
 
 
 page>form {
-	margin: 1em;
+	/* margin: 1em; */
 	background: lightgrey;
 	padding: 1em;
 	border-radius: 1em;
 }
 
-roof {
-	flex: none;
-	/* font-size:1.5em; */
-	padding: .5em;
+roof, page {
+	/* flex: none; */
+	padding: 1rem;
 }
 
 page>ul {
 	flex: 1;
 	overflow:auto;
+	padding: 0;
+	/* margin: 0; */
+}
+
+page>ul::before {
+    display: block;
+    font-size: 1.25em;
+    margin-bottom: 2rem;
+}
+
+page>ul>li {
+    padding: 1em 0;
 }
 
 
 page>button {
-	font-size: 2em;
+	font-size: 1.5em;
 }
 
 form>button{
@@ -92,19 +104,22 @@ form>button{
 
 
 tabset {
-	display: block;
+	display: flex;
+	margin-top: -2.5rem;
+	height: 2.5rem;
 	bottom:0;
 	left: 1rem;
-	text-transform: uppercase;
+	text-transform: capitalize;
 	padding: 0 1em;
+	flex-direction: row;
 }
 
 tab {
-	display: inline-block;
+	/* display: inline-block; */
 	transition: all .5s;
-	padding: .5em 1em;
-	margin: 0 .1em;
-	border-radius: .2em .2em 0 0;
+	padding: .5em;
+	/* margin: 0 .1em; */
+	border-radius: .25em .25em 0 0;
 }
 
 
