--- a/samples/poputka/pwa.css
+++ b/samples/poputka/pwa.css
@@ -15,7 +15,8 @@ html,body {
 	font: normal 1rem Roboto, sans-serif;
 	height: 100%;
 	padding: 0;
-	margin: 0;
+	max-width: 24rem;
+	margin: 0 auto
 }
 
 label {
