--- a/samples/poputka/poputka.css
+++ b/samples/poputka/poputka.css
@@ -19,6 +19,11 @@ deck>button{
 	margin-left: .5rem;
 	padding: 1em 2em;
 }
+etage>button {
+	font-size: 1.5em;
+}
+
+
 
 .select:empty::before {
     color: gray;
@@ -76,7 +81,8 @@ deck>button{
 span.time {
     display: inline-block;
     padding: .25em .5em;
-    background: gainsboro;
+    background: gold;
+    color: black;
     font-weight: bold;
     border-radius: .25em;
     /* margin-right: 1em; */
@@ -90,7 +96,7 @@ span.vehicle {
     display: inline-block;
     padding: 0 .5em;
     font-style: italic;
-    color: gray;
+    /* color: gray; */
 }
 
 .where {
@@ -120,17 +126,23 @@ span.places {
     margin: .5em 0;
 }
 
-li>.ride {
+li.ride {
     position: relative;
-    /* padding: 1em; */
+    padding: 1em;
+    /* margin: 1em -1em; */
     /* border: 2px solid gainsboro; */
-    border-radius: .5rem;
+    /* border-radius: .5rem; */
+}
+
+li.ride.vehicle {
+    background: lavender;
+    /* color: white; */
 }
 
 span.price {
     position: absolute;
-    right: 0;
-    font-size: 1.4em;
+    right: 1em;
+    font-size: 1.25em;
 }
 
 form.info {
