--- a/samples/poputka/pwa.css
+++ b/samples/poputka/pwa.css
@@ -44,7 +44,15 @@ input,select,textarea {
 	font-family:inherit;
 	padding:.2em;
 	border:none;
+	background: white;
 }
+
+input[type=number]::-webkit-inner-spin-button {
+   -webkit-appearance: inner-spin-button;
+   opacity: 1;
+   margin-left: 10px;
+}
+
 
 group>select {
     flex: 1;
