--- a/samples/poputka/poputka.css
+++ b/samples/poputka/poputka.css
@@ -2,6 +2,11 @@ app {
     background: gold;
 }
 
+app::before {
+    /* content: "Poput4K"; */
+    font: bold 1.4em sans-serif;
+}
+
 page {
     background: white;
 }
@@ -17,8 +22,9 @@ button{
 	border-radius: .5em;
 }
 deck>button{
-	margin-left: .5rem;
+	/* margin-left: .5rem; */
 	padding: 1em 2em;
+	flex: 1;
 }
 button.add-ride {
 	font-size: 1.5em;
