--- a/samples/poputka/poputka.css
+++ b/samples/poputka/poputka.css
@@ -1,21 +1,3 @@
-app {
-    background: gold;
-}
-
-page {
-    background: white;
-}
-
-tab.selected {
-	background: white;
-	color: black;
-}
-
-button{
-	background: black;
-	color: white;
-	border-radius: .5em;
-}
 deck>button{
 	padding: 1em 2em;
 	flex: 1;
@@ -26,73 +8,70 @@ button.add-ride {
 }
 
 
+.select {
+	height: 1em;
+	padding: .5em;
+}
 
 .select:empty::before {
-    color: gray;
-    font-style: italic;
+	color: gray;
+	font-style: italic;
 }
 
 .place {
-    display: inline-block;
-    padding: .2em .4em;
-    margin: .2em;
-    background: white;
-    color: black;
+	color: black;
+	display: inline-block;
+	padding: .2em .4em;
+	margin: .2em;
 }
 
 .area {
-    display: inline-block;
-    border-radius: .2em;
-    background: whitesmoke;
-    padding: .25em .5em;
-    margin: .25em;
+	background: whitesmoke;
+	display: inline-block;
+	border-radius: .2em;
+	padding: .25em .5em;
+	margin: .25em;
 }
 
 .area.selected {
-    background: black;
-    color: white;
+	background: black;
+	color: white;
 }
 
 .sub {
-    margin-left: 1em;
-}
-
-.all {
-    font-size: 2em;
+	margin-left: 1em;
 }
 
 .areas {
-    margin: 1em;
+	margin: 1em;
 }
 
 .regions {
-    text-align: center;
-    font-size: 1.2em;
+	text-align: center;
+	font-size: 1.2em;
+	max-width: 18em;
 }
 
 .region {
-    margin: 1em;
-    border-top: 1px solid gray;
+	margin: 1em;
+	border-top: 1px solid gray;
 }
 
 .region>.name {
-    font: bold 1em sans-serif;
-    margin: .5em;
+	font: bold 1em sans-serif;
+	margin: .5em;
 }
 
 span.time {
-    display: inline-block;
-    padding: .25em .5em;
-    background: gold;
-    color: black;
-    font-weight: bold;
-    border-radius: .25em;
-    /* margin-right: 1em; */
+	display: inline-block;
+	padding: .25em .5em;
+	font-weight: bold;
+	border-radius: .25em;
 }
 
 span.vehicle {
-    display: inline-block;
-    padding: 0 .5em;
+	display: inline-block;
+	padding: 0 .5em;
 }
 
 span.vehicle:empty {
@@ -104,107 +83,81 @@ span.vehicle:not(:empty) {
 }
 
 group.where {
-    flex-direction: column;
-    position: relative;
+	flex-direction: column;
+	position: relative;
 }
 .when{
-    flex-direction: row;
+	flex-direction: row;
 }
 .when>input {
-    flex: 1;
-    text-align: center;
-    font-size: 1.25em;
+	flex: 1;
+	text-align: center;
+	font-size: 1.25em;
 }
-.select {
-    height: 1em;
-    padding: .5em;
-    background: white;
-}
-
 span.terms {
 	display: block;
-    font-weight: bold;
+	font-weight: bold;
 }
 
 span.places {
-    display: block;
-    margin: .5em 0;
+	display: block;
+	margin: .5em 0;
 }
 
 li.ride {
-    position: relative;
-    padding: 1em;
-    margin: .5em 0;
-    /* border: 2px solid gainsboro; */
-    /* border-radius: .5rem; */
-}
-
-li.ride.vehicle {
-    background: lavender;
-    /* color: white; */
+	position: relative;
+	padding: 1em;
+	margin: .5em 0;
 }
 
 span.price {
-    position: absolute;
-    right: 1em;
-    font-size: 1.25em;
-    /* color: lightslategrey; */
+	position: absolute;
+	right: 1em;
+	font-size: 1.25em;
 }
 
 form.info {
-    /* text-align: center; */
-    max-width: 18rem;
+	max-width: 18rem;
 }
 
 label.price>input {
-    /* text-align: center; */
-    font-size: 2em;
+	font-size: 2em;
 }
 
 span.note {
-    color: gray;
-    font-style: italic;
-}
-
-html {
-    background-color: gainsboro;
+	font-style: italic;
 }
 
 .swap {
-    display: block;
-    position: absolute;
-    right: 1em;
-    top: 1em;
-    width: 2em;
-    height: 2em;
-    box-sizing: border-box;
-    padding: .4em;
-    text-align: center;
-    background: gold center no-repeat url(/stuff/icons/swap-v.svg);
-    background-size: 1.25em;
-    font-weight: bold;
-    border-radius: 1em;
+	background: gold center no-repeat url(/stuff/icons/swap-v.svg);
+	display: block;
+	position: absolute;
+	right: 1em;
+	top: 1em;
+	width: 2em;
+	height: 2em;
+	box-sizing: border-box;
+	padding: .4em;
+	text-align: center;
+	background-size: 1.25em;
+	font-weight: bold;
+	border-radius: 1em;
 }
 
 .vehicle span.price {
-    color: black;
-    font-weight: bold;
+	font-weight: bold;
 }
 
 a.tg {
-    display: inline-block;
-    height: 2em;
-    width: 2em;
-    /* margin: .5em; */
-    /* border-radius: .5em; */
-    background: left no-repeat url(/stuff/icons/tg.png);
-    background-size: contain;
-    /* color: white; */
-    /* text-decoration: none; */
+	display: inline-block;
+	height: 2em;
+	width: 2em;
+	background: left no-repeat url(/stuff/icons/tg.png);
+	background-size: contain;
 }
 
 .ride a.tg {
-    position: absolute;
-    right: 1em;
-    bottom: 1em;
+	position: absolute;
+	right: 1em;
+	bottom: 1em;
 }
