--- a/samples/poputka/colors-tg.css
+++ b/samples/poputka/colors-tg.css
@@ -21,9 +21,10 @@
 --tg-theme-destructive-text-color: #d14e4e;
 */
 
-app {
+body {
 	background-color: var(--tg-theme-secondary-bg-color);
 	color:var(--tg-theme-text-color);
+	/* padding-bottom:2em; */
 }
 
 page,tab.selected,.select,.place {
