--- a/samples/poputka/tg.css
+++ b/samples/poputka/tg.css
@@ -60,7 +60,7 @@ group>select {
 
 :focus-visible {
     outline: none;
-    background: floralwhite;
+    /* background: floralwhite; */
 }
 
 input {
