--- a/samples/poputka/poputka.css
+++ b/samples/poputka/poputka.css
@@ -11,10 +11,15 @@ button.add-ride {
 .input {
 	height: 1em;
 	padding: .5em;
+	white-space: nowrap;
 }
 
-.input:empty::before {
-	color: gray;
+.input::before {
+	display:inline-block;
+	font-size: .8em;
+	width:4em;
+	text-align:right;
+	padding-right: 1em;
 	font-style: italic;
 }
 
@@ -91,14 +96,15 @@ group.where {
 	text-align: center;
 	font-size: 1.25em;
 }
-span.terms {
+span.terms, span.places {
 	display: block;
-	font-weight: bold;
+	white-space: nowrap;
+	/* font-weight: bold; */
 }
 
 span.places {
 	display: block;
-	margin: .5em 0;
+	/* margin: .5em 0; */
 }
 
 li.ride {
@@ -129,7 +135,7 @@ span.note {
 	background: center no-repeat url(/stuff/icons/swap-v.svg);
 	display: block;
 	position: absolute;
-	right: 1em;
+	right: 0;
 	top: 1em;
 	width: 2em;
 	height: 2em;
@@ -154,4 +160,8 @@ a.tg {
 	position: absolute;
 	right: 1em;
 	bottom: 1em;
+}
+
+.title>.places {
+    margin: 1em 0;
 }
