--- a/samples/poputka/poputka.css
+++ b/samples/poputka/poputka.css
@@ -14,12 +14,12 @@ button.add-ride {
 	white-space: nowrap;
 }
 
-.input::before {
+.input::before, label::before {
 	display:inline-block;
-	font-size: .8em;
+	font-size: .9em;
 	width:4em;
 	/* text-align:right; */
-	padding-right: 1em;
+	padding-right: .2em;
 	font-style: italic;
 }
 
@@ -94,7 +94,7 @@ group.where {
 .when>input {
 	flex: 1;
 	text-align: center;
-	font-size: 1.25em;
+	/* font-size: 1.25em; */
 }
 span.terms, span.places {
 	display: block;
@@ -124,7 +124,7 @@ form.info {
 }
 
 label.price>input {
-	font-size: 2em;
+	/* font-size: 2em; */
 }
 
 span.note {
@@ -171,4 +171,20 @@ a.tg {
 span.date {
     display: inline-block;
     padding: .5em;
+}
+
+deck>.seats {
+    width: 4em;
+}
+
+deck>.vehicle {
+    flex: 1;
+}
+
+deck>label::before {
+    margin: .5em;
+}
+
+deck>.price {
+    width: 5em;
 }
