--- a/samples/poputka/tg.css
+++ b/samples/poputka/tg.css
@@ -62,7 +62,7 @@ input,select,textarea {
 }
 
 group>input {
-	padding: .5em;
+	/* padding: .5em; */
 }
 
 group>select {
@@ -93,8 +93,8 @@ input::placeholder, textarea::placeholder{
 label>input, label>select, label>textarea,label>group{
 	box-sizing: border-box;
 	width:100%;
-	margin: .5rem 0;
-	border-radius: .5rem;
+	/* margin: .5rem 0; */
+	/* border-radius: .5rem; */
 }
 
 
@@ -214,7 +214,7 @@ shield>deck {
 }
 
 deck {
-    margin-top: 2em;
+    /* margin-top: 2em; */
     display: flex;
     flex-direction: row;
     gap: .5em;
