--- a/samples/poputka/poputka.css
+++ b/samples/poputka/poputka.css
@@ -17,10 +17,14 @@ button.add-ride {
 .input::before, label::before {
 	display:inline-block;
 	font-size: .9em;
-	width:4em;
 	/* text-align:right; */
 	padding-right: .2em;
 	font-style: italic;
+}
+
+.input::before {
+	width:4em;
+
 }
 
 .place {
@@ -146,7 +150,7 @@ span.note {
 	text-align: center;
 	background-size: 1.25em;
 	font-weight: bold;
-	border-radius: 1em;
+	border-radius: 1em 0 0 1em;
 }
 
 
@@ -183,6 +187,7 @@ deck>.vehicle {
 
 label::before {
     margin: .1em;
+    white-space: nowrap;
 }
 
 deck>.price {
