--- a/samples/poputka/tg.css
+++ b/samples/poputka/tg.css
@@ -10,6 +10,8 @@
 	to { opacity: 1; }
 }
 
+BUTTON#tgMainButton{display:none}
+
 
 html,body {
 	font: normal 1rem Roboto, sans-serif;
@@ -21,6 +23,7 @@ html,body {
 
 body, app, roof, page, etage {
 	display: flex;
+	max-height: 100%;
 }
 
 body, app, etage {
@@ -45,6 +48,8 @@ roof,page {
 etage {
     flex: 1;
     margin: 1rem;
+    height: 100%;
+    overflow: auto;
 }
 
 page {
@@ -223,4 +228,5 @@ deck {
 
 app {
     padding-bottom: 1em;
+    /* max-height: 100%; */
 }
