--- a/samples/poputka/tg.css
+++ b/samples/poputka/tg.css
@@ -32,8 +32,10 @@ body, app, etage {
 
 roof{
 	padding: 1em;
+	margin: 1rem;
+	border-radius: 1em;
 	gap: 1em;
-	
+	background: var(--tg-theme-secondary-bg-color);
 }
 
 roof,page {
@@ -50,7 +52,7 @@ etage {
 page {
     flex: 1;
     overflow-y: auto;
-    padding: 1em;
+    /* padding: 1em; */
 }
 
 input,select,textarea {
@@ -124,14 +126,18 @@ form>label {
 
 page>ul {
 	padding: 0;
-	margin: .5em 0;
+	margin: 0;
 }
 
 page>ul>li{
 	display: block;
 	max-width: 100%;
 	overflow: hidden;
-	padding: .5em 0;
+	background: var(--tg-theme-secondary-bg-color);
+	position: relative;
+	padding: .5em 1em;
+	margin: .5em 0;
+	border-radius: 1em;
 }
 
 form>button{
@@ -143,7 +149,7 @@ form>button{
 
 group{
 	display: flex;
-	gap: .1em;
+	gap: .2em;
 	overflow: hidden;
 }
 
@@ -229,4 +235,12 @@ deck {
 app {
     padding-bottom: 1em;
     /* max-height: 100%; */
+}
+
+html {
+    /* font-size: 14px; */
+}
+
+span.user {
+    font-weight: bold;
 }
