--- a/samples/poputka/poputka.css
+++ b/samples/poputka/poputka.css
@@ -65,10 +65,10 @@ button.add-ride {
 }
 
 span.time {
-	display: inline-block;
-	padding: .1em .5em;
-	font-weight: bold;
-	border-radius: .25em;
+	/* display: inline-block; */
+	/* padding: .1em .5em; */
+	/* font-weight: bold; */
+	/* border-radius: .25em; */
 }
 
 span.vehicle {
@@ -77,7 +77,7 @@ span.vehicle {
 }
 
 .rider span.price {
-	font-weight: bold;
+	/* font-weight: bold; */
 }
 
 .passenger .vehicle {
@@ -111,12 +111,6 @@ span.places {
 	margin: .5em 0;
 }
 
-li.ride {
-	position: relative;
-	padding: .5em 1em;
-	margin: .5em -1em;
-}
-
 span.price {
 	position: absolute;
 	right: 1em;
@@ -132,7 +126,7 @@ label.price>input {
 }
 
 span.note {
-	font-style: italic;
+	/* font-style: italic; */
 	display: block;
 	margin: .5em 0;
 }
@@ -150,7 +144,7 @@ span.note {
 	text-align: center;
 	background-size: 1.25em;
 	font-weight: bold;
-	border-radius: 1em 0 0 1em;
+	border-radius: 1em;
 }
 
 
@@ -196,5 +190,5 @@ deck>.price {
 }
 
 page>.title {
-    /* margin: 1em; */
+    margin: .5em;
 }
