--- a/samples/poputka/tg.css
+++ b/samples/poputka/tg.css
@@ -21,7 +21,7 @@ html,body {
 	margin: auto;
 }
 
-body, app, roof, page, etage {
+body, app, etage, roof, page {
 	display: flex;
 	max-height: 100%;
 }
@@ -30,99 +30,34 @@ body, app, etage {
 	flex-direction: column-reverse;
 }
 
-roof{
-	padding: 1em;
-	margin: 1rem;
-	border-radius: 1em;
-	gap: 1em;
-	background: var(--tg-theme-secondary-bg-color);
-}
 
 roof,page {
 	flex-direction: column;
 }
 
+roof,etage,app>button{
+	margin: .5rem;
+}
+
+roof	{
+	padding: 1em;
+	gap: 1em;
+}
+
+roof::before {
+	font-weight: bold;
+}
+
 etage {
-    flex: 1;
-    margin: 1rem;
-    height: 100%;
-    overflow: auto;
+	flex: 1;
+	height: 100%;
+	overflow: auto;
 }
 
 page {
-    flex: 1;
-    overflow-y: auto;
-    /* padding: 1em; */
+	flex: 1;
+	overflow-y: auto;
 }
-
-input,select,textarea {
-	display:block;
-	font-size: inherit;
-	font-family:inherit;
-	padding:.2em;
-	border:none;
-	background: white;
-}
-
-group>input {
-	/* padding: .5em; */
-}
-
-group>select {
-    flex: 1;
-}
-
-:focus-visible {
-    outline: none;
-    /* background: floralwhite; */
-}
-
-input {
-	text-align: inherit;
-}
-
-input[type=number] {
-	text-align: center;
-}
-
-group>input[type="number"] {
-    width: 4em;
-}
-
-input::placeholder, textarea::placeholder{
-	font: italic 1em sans-serif;
-}
-
-label>input, label>select, label>textarea,label>group{
-	box-sizing: border-box;
-	width:100%;
-	/* margin: .5rem 0; */
-	/* border-radius: .5rem; */
-}
-
-
-button {
-	padding: .5em;
-	border: none;
-	border-radius: 1em;
-}
-
-
-form {
-	/* background: lavender; */
-	/* padding: 1rem; */
-	/* border-radius: .5rem; */
-}
-
-label {
-    display: block;
-    /* margin: .5rem 0; */
-}
-
-form>label {
-    margin: .5em 0;
-}
-
 
 page>ul {
 	padding: 0;
@@ -133,11 +68,64 @@ page>ul>li{
 	display: block;
 	max-width: 100%;
 	overflow: hidden;
-	background: var(--tg-theme-secondary-bg-color);
 	position: relative;
 	padding: .5em 1em;
 	margin: .5em 0;
+}
+
+
+input,select,textarea {
+	display:block;
+	font-size: inherit;
+	font-family:inherit;
+	padding:.2em;
+	border:none;
+}
+
+
+group{
+	display: flex;
+	gap: .2em;
+	overflow: hidden;
+}
+
+group>select {
+	flex: 1;
+}
+group>input[type="number"] {
+	width: 4em;
+}
+
+input {
+	text-align: inherit;
+}
+
+input[type=number] {
+	text-align: center;
+}
+
+input::placeholder, textarea::placeholder{
+	font: italic 1em sans-serif;
+}
+
+label>input, label>select, label>textarea,label>group{
+	box-sizing: border-box;
+	width:100%;
+}
+
+button {
+	padding: .5em;
+	border: none;
 	border-radius: 1em;
+}
+
+
+label {
+	display: block;
+}
+
+form>label {
+	margin: .5em 0;
 }
 
 form>button{
@@ -147,15 +135,7 @@ form>button{
 	width: 100%;
 }
 
-group{
-	display: flex;
-	gap: .2em;
-	overflow: hidden;
-}
 
-roof>group {
-	box-shadow: 0 2px 6px rgba(0,0,0,.1);
-}
 
 tabset {
 	display: flex;
@@ -194,7 +174,6 @@ modal>scrim{
 }
 modal>shield {
 	padding: 1rem;
-	/* background: white; */
 	border: none;
 	border-radius: 1em;
 	box-shadow: 0 0.5rem 1rem rgba(0,0,0,.4);
@@ -220,28 +199,19 @@ shield>input {
 shield>.actions{padding:.5rem;text-align: right;margin: 1rem -1rem -1rem -1rem;}
 
 shield>deck {
-    display: block;
-    text-align: right;
-    margin-top: 2rem;
+	display: block;
+	text-align: right;
+	margin-top: 2rem;
 }
 
 deck {
-    /* margin-top: 2em; */
-    display: flex;
-    flex-direction: row;
-    gap: .5em;
+	display: flex;
+	flex-direction: row;
+	gap: .5em;
 }
 
 
-app {
-    padding-bottom: 1em;
-    /* max-height: 100%; */
-}
-
-html {
-    /* font-size: 14px; */
-}
 
 span.user {
-    font-weight: bold;
+	font-weight: bold;
 }
